# netbox-plugin-unimus

./: LICENSE  pyproject.toml  pyproject.toml.backup  tasks.py
development/: Dockerfile  configuration.py  dev.env  docker-compose.yml
netbox_unimus/: __init__.py  admin.py  model.py  template_content.py
netbox_unimus/migrations/: 0001_initial.py  0002_rename_test_unimusintegration_test_unimus_connection.py
netbox_unimus/templates/admin/: custom_change_form.html
netbox_unimus/templates/inc/: device_extension.html
netbox_unimus/templatetags/: status.py
